--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
     <div class="container">
         <header>
             <h1>AI唱课文</h1>
-            <p class="subtitle">智能AI演绎经典课文，在线播放，禁止下载</p>
+            <p class="subtitle">智能AI演绎经典课文，在线播放</p>
         </header>
         
         <div class="player-container">
             <div class="player-header">
                 <div class="now-playing">选择一首歌曲开始播放</div>
                 <div class="no-download">
-                    <i>🔒</i> 禁止下载，仅供在线播放
+                    <i>🔒</i> 仅供教研与学习使用
                 </div>
             </div>
             
@@ -672,4 +672,5 @@
         initPlayer();
     </script>
 </body>
+
 </html>
