--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
             ],
             "02chuzhong": [
                 { title: "刘禹锡《秋词》（七上）-秋光炸场A版-豆包词+Muse AI曲+SHNUYL制作", duration: "3:10", path: "audio/02chuzhong/01刘禹锡《秋词》（七上）-秋光炸场A版-豆包词+Muse AI曲+SHNUYL制作.mp3" },
-                { title: "皇帝的新装-安徒生原著+Kimi词+Muse AI+SHNUYL制作", duration: "4:20", path: "audio/02chuzhong/02皇帝的新装-安徒生原著+Kimi词+Muse AI+SHNUYL制作.mp3" }
+                { title: "皇帝的新装-安徒生原著+Kimi词+Muse AI+SHNUYL制作", duration: "4:20", path: "audio/02chuzhong/02皇帝的新装-安徒生原著+Kimi词+Muse AI+SHNUYL制作.mp3"},
+                { title: "朱自清《背影》-豆包词+Muse AI曲+SHNUYL制作", duration: "3:07", path: "audio/02chuzhong/03朱自清《背影》-豆包词+Muse AI曲+SHNUYL制作.mp3" }
             ],
             "03gaozhong": [
                 { title: "蜀道难-李白+Muse AI+SHNUYL制作", duration: "5:30", path: "audio/03gaozhong/01蜀道难-李白+Muse AI+SHNUYL制作.mp3" },
@@ -672,5 +673,4 @@
         initPlayer();
     </script>
 </body>
-
 </html>
